--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
   }
 }
 </script>
-    <script type="module" src="index.tsx"></script>
   </head>
   <body>
     <div class="texture-grain"></div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
