feat: Improve typography and text alignment
Enhance readability and visual appeal by adjusting text line heights, word breaks, and alignment across various components. This change ensures that text wraps appropriately and is presented consistently on both mobile and desktop devices.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
         overflow-x: hidden;
         /* Proportional Metrics for "Magazine-like" Typography */
         font-feature-settings: "palt";
+        /* Japanese Typography Improvements */
+        word-break: keep-all; /* Prevent line breaks in the middle of words */
+        overflow-wrap: anywhere; /* Ensure long strings like URLs break */
+        line-height: 1.8; /* Improve readability */
       }
 
       /* Global Cinematic Vignette */
